--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Blog Website Backend",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "Evva",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
